[tool.poetry]
name = "projeto-cadastro-streamlit"
version = "0.1.0"
description = ""
authors = ["Luhluh1993 <luckas.std@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
